--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,8 @@
     height: 700px;
 }
 
-/* Used to remove any padding from Bootstrap columns */
-
-.nopadding {
-   padding: 0 !important;
-   margin: 0 !important;
-}
-
-.fillwidth {
-   width: 100% !important;
+.no-padding {
+	margin: 0px !important;
 }
 
 /* - - - - - - - - -
@@ -53,8 +46,19 @@
  * 	PROJECTS
 - - - - - - - - - - */
 
+.projects-row {
+	display: flex;
+	flex-basis: 100px;
+	flex-flow: row wrap-reverse;
+}
+
 .project {
+	display: inline;
 	position: relative;
+	flex: 1 0 200px;
+/*
+	min-width: 300px;
+	max-width: 400px;*/
 }
 
 	.project .project__image {
@@ -70,6 +74,7 @@
 		position: absolute;
 		width: 100%;
 		height: 75%;
+		padding: 10px;
 		text-align: center;
 		margin-top: 25%;
 		z-index: 1;
@@ -81,8 +86,24 @@
 		}
 
 		.project .project__info .project__info__description {
-			font-size: 125%;
-			font-family: 'Roboto', sans-serif;
+			font-size: 150%;
+			font-family: 'Roboto Condensed', sans-serif;
 		}
 
+/* - - - - - - - - -
+ * 	Contact Section
+- - - - - - - - - - */
 
+.contact {
+	background-color: rgb(192, 192, 192);
+	text-align: center;
+	width: 100%;
+	height: 100%;
+}
+
+.contact-header {
+	font-family: 'Roboto Condensed', sans-serif;
+	color: black;
+	font-size: 300%;
+	padding: 50px;
+}
