--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,26 @@ section {
 	padding-bottom: 7%;
 }
 
+.btn--block {
+	border: 5px solid black;
+	background-color: white;
+	color: black;
+
+	font-family: 'Roboto Condensed', serif;
+	font-size: 115%;
+	text-transform: uppercase;
+
+	min-width: 150px;
+	min-height: 50px;
+
+	margin-bottom: 7%;
+}
+
+.btn--block:hover {
+	background-color: black;
+	color: white;
+}
+
 /* - - - - - - - - -
  * 	WEBSITE HEADER
 - - - - - - - - - - */
@@ -83,44 +103,40 @@ section {
 
 /* Carousel Styling */
 
-#projects__carousel { width: 100% ;}
-
-#projects__carousel .carousel-control .item.left { 
-	
-}
+#projects__carousel { width: 100% ; }
 
 #projects__carousel .carousel-inner .active.left  { left: -33%;              }
 #projects__carousel .carousel-inner .active.right { left: 33%;              }
 #projects__carousel .carousel-inner .next         { left: 33%;                }
 #projects__carousel .carousel-inner .prev         { left: -33%;              }
 
-	.project__image {
-		width: 100%;
-		height: 100%;
+.project__image {
+	width: 100%;
+	height: 100%;
+}
+
+.project .project__info {
+	color: rgba(0, 0, 0, 1);
+	display: none;
+
+	position: absolute;
+	width: 100%;
+	height: 75%;
+	padding: 10px;
+	text-align: center;
+	margin-top: 25%;
+	z-index: 1;
+}
+
+	.project .project__info .project__info__title {
+		font-size: 250%;
+		font-family: 'Roboto Condensed', sans-serif;
 	}
 
-	.project .project__info {
-		color: rgba(0, 0, 0, 1);
-		display: none;
-
-		position: absolute;
-		width: 100%;
-		height: 75%;
-		padding: 10px;
-		text-align: center;
-		margin-top: 25%;
-		z-index: 1;
+	.project .project__info .project__info__description {
+		font-size: 150%;
+		font-family: 'Roboto Condensed', sans-serif;
 	}
-
-		.project .project__info .project__info__title {
-			font-size: 250%;
-			font-family: 'Roboto Condensed', sans-serif;
-		}
-
-		.project .project__info .project__info__description {
-			font-size: 150%;
-			font-family: 'Roboto Condensed', sans-serif;
-		}
 
 /* - - - - - - - - -
  * 	SKILLS
@@ -128,13 +144,51 @@ section {
 
 .skills {
 	background-color: rgb(220, 220, 220);
+	padding-bottom: 7%;
 }
+
+	.skills__table {
+		background-color: rgb(220, 220, 220);
+		font-family: 'Roboto', sans-serif;
+	}
+
+		.skills__table td {
+			text-align: left;
+			padding-top: 5px;
+			padding-bottom: 5px;
+		}
+
+.skill {
+
+}
+
+	.skill__language {
+		font-size: 175%;
+		padding-left: 35px;
+		padding-right: 50px;
+	}
+
+	.skill__rating {
+		font-size: 150%;
+		padding-right: 50px;
+	}
+
+	.skill__projects {
+		font-size: 100%;
+		padding-right: 35px;
+	}
+
+		.skill__projects a {
+			color: black;
+			text-decoration: none;
+		}
 
 /* - - - - - - - - -
  * 	RESUME
 - - - - - - - - - - */
 
 .resume {
+
 }
 
 /* - - - - - - - - -
