--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 section {
 	margin: 0 !important;
+	padding: 7% !important;
 }
 
 body {
@@ -30,7 +31,7 @@ body {
 	font-family: 'Times New Roman', serif;
 
 	margin: 0;
-	padding: 7%;
+	padding-bottom: 7%;
 }
 
 .section__description {
@@ -39,7 +40,6 @@ body {
 	line-height: 1.2em;
 
 	margin: 0;
-	padding-bottom: 7%;
 }
 
 .btn--block {
@@ -53,8 +53,6 @@ body {
 
 	min-width: 150px;
 	min-height: 50px;
-
-	margin-bottom: 7%;
 }
 
 .btn--block:hover {
@@ -67,7 +65,7 @@ body {
 - - - - - - - - - - */
 
 .jumbotron {
-	background-image: url(../images/header_background.jpg);
+	background-image: url(../img/header_background.jpg);
 	background-size: cover;
 	height: 700px;
 }
@@ -82,12 +80,12 @@ body {
 
 	#website-header__title {
 		font-family: 'Roboto Condensed', sans-serif;
-		font-size: 700%;
+		font-size: 600%;
 	}
 
 	#website-header__subtitle {
 		font-family: 'Cormorant Garamond', serif;
-		font-size: 150%;
+		font-size: 300%;
 		font-style: italic;
 	}
 
@@ -125,17 +123,44 @@ body {
  * 	ABOUT ME
 - - - - - - - - - - */
 
-.about-me {
+#about-me {
 	background-color: white;
+}
+
+/* - - - - - - - - -
+ * 	PROJECT MODAL
+- - - - - - - - - - */
+
+#project-info {
+	font-size: 150%;
+}
+
+#project-modal .modal-dialog {
+	background-color: #FFF;
+}
+
+#project-modal .modal-header {
+	background-color: #BBB;
+}
+
+#project-modal .modal-title {
+	font-size: 200%;
+	text-transform: uppercase;
+}
+
+#project-modal .close {
+	float: none;
+	position: absolute;
+	right: 15px;
+	top: 25px;
 }
 
 /* - - - - - - - - -
  * 	PROJECTS
 - - - - - - - - - - */
 
-.projects {
+#projects {
 	background-color: rgb(220, 220, 220);
-	padding: 0 7% 7% 7%;
 }
 
 /* Slider Styling */
@@ -144,36 +169,12 @@ body {
 	width: 100%;
 }
 
-.project .project__info {
-	color: rgba(0, 0, 0, 1);
-	display: none;
-
-	position: absolute;
-	width: 100%;
-	height: 75%;
-	padding: 10px;
-	text-align: center;
-	margin-top: 25%;
-	z-index: 100;
-}
-
-	.project .project__info .project__info__title {
-		font-size: 250%;
-		font-family: 'Roboto Condensed', sans-serif;
-	}
-
-	.project .project__info .project__info__description {
-		font-size: 150%;
-		font-family: 'Roboto Condensed', sans-serif;
-	}
-
 /* - - - - - - - - -
  * 	SKILLS
 - - - - - - - - - - */
 
-.skills {
+#skills {
 	background-color: white;
-	padding-bottom: 7%;
 }
 
 	.skills__table {
@@ -216,7 +217,7 @@ body {
  * 	RESUME
 - - - - - - - - - - */
 
-.resume {
+#resume {
 	background-color: rgb(220, 220, 220);
 }
 
@@ -224,13 +225,9 @@ body {
  * 	CONTACT
 - - - - - - - - - - */
 
-.contact {
+#contact {
 	background-color: rgb(200, 210, 220);
 	height: 100%;
-}
-
-.contact .section__description {
-	padding-bottom: 0;
 }
 
 	#contact__table {
@@ -259,12 +256,12 @@ body {
  * 	Copyright Section
 - - - - - - - - - - */
 
-.copyright {
+#copyright {
 	background-color: rgb(0, 0, 0);
+	padding: 20px !important;
 }
 
 .copyright__text {
 	color: rgb(220, 220, 220);
 	font-size: 12px;
-	padding: 20px;
 }
